Moved the meeting type under the same mat-list as the ng-select filters and fixed it's alignment.

--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -85,6 +85,7 @@ classplan-search {
 
               .ng-select-label {
                 cursor: context-menu;
+                padding-top: 1px;
               }
 
               .color-picker {
@@ -108,13 +109,19 @@ classplan-search {
                 flex-direction: row;
                 align-items: center;
 
+                .ng-value-icon {
+                  display: inherit;
+                  flex-direction: inherit;
+                  align-items: inherit;
+                  height: 19px;
+                }
+
                 .ng-value-icon.left {
-                  height: 100%;
-                  vertical-align: top;
+                  padding: 1px 3px 0 1px;
                 }
 
                 .ng-value-icon.right {
-                  padding-left: 5px;
+                  padding: 1px 0 3px 3px;
                 }
               }
             }
@@ -128,24 +135,25 @@ classplan-search {
             }
 
           }
+
+          &#meeting-type {
+            width: 100%;
+            margin: 0;
+
+            mat-form-field {
+              width: inherit;
+            }
+          }
         }
       }
 
-      #other-fields {
+      mat-selection-list {
         padding: 0 16px;
-        margin: 0 auto;
-        width: calc(100% - 32px);
-        display: flex;
-        flex-direction: column;
-        align-items: center;
 
-        mat-form-field, mat-selection-list {
-          width: 100%;
-          padding: 0 16px;
-        }
-
-        mat-list-option div {
-          padding: 0;
+        mat-list-option {
+          div {
+            padding: 0;
+          }
         }
       }
     }
